<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="#cdcdcd">
	
     <TextView
        android:id="@+id/textview_automatik_bluetoothstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:text="@string/textview_automatik">     
    </TextView>
    
	<View
	    android:id="@+id/ColorIndicator"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_gravity="center"
	    android:layout_weight="0.50" >

	</View>

	
	
	<LinearLayout
		android:layout_width="fill_parent" 
		android:orientation="vertical" 
		android:gravity="center" 
		android:layout_height="0dp" 
		android:layout_weight="2">
		
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_weight="1" 
			android:layout_height="0dp" 
			android:background="#f00" 
			android:paddingRight="10dp">
			
			<TextView
				android:layout_height="wrap_content"
				android:text="@string/red" 
				android:layout_width="fill_parent"
				android:layout_weight="4"
				android:layout_gravity="center" 
				android:gravity="center" 
				android:textColor="#000">
			</TextView>
	
			<SeekBar android:id="@+id/SeekBarRed" 
				android:layout_width="fill_parent" 
				android:layout_weight="1" 
				android:layout_height="wrap_content" 
				android:max="255" 
				android:layout_gravity="center" 
				android:minHeight="50dp" 
				android:thumbOffset="4px" 
				android:thumb="@drawable/btn_square_overlay_normal" 
				android:progressDrawable="@drawable/progress_horizontal">
			</SeekBar>
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_weight="1" 
			android:layout_height="0dp" 
			android:background="#0f0" 
			android:paddingRight="10dp">
			
			<TextView
				android:layout_height="wrap_content"
				android:text="@string/green" 
				android:layout_weight="4"
				android:layout_width="fill_parent"
				android:layout_gravity="center" 
				android:gravity="center" 
				android:textColor="#000">
			</TextView>
			
			<SeekBar android:id="@+id/SeekBarGreen"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" 
				android:layout_weight="1"
				android:max="255" 
				android:layout_gravity="center" 
				android:minHeight="50dp" 
				android:thumb="@drawable/btn_square_overlay_normal" 
				android:thumbOffset="4px" 
				android:progressDrawable="@drawable/progress_horizontal">
			</SeekBar>
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="0dp" 
			android:layout_weight="1" 
			android:background="#00f" 
			android:paddingRight="10dp">
			
			<TextView
				android:layout_height="wrap_content"
				android:text="@string/blue" 
				android:layout_width="fill_parent"
				android:layout_weight="4"
				android:gravity="center" 
				android:layout_gravity="center" 
				android:textColor="#000">
			</TextView>
			<SeekBar android:id="@+id/SeekBarBlue" 
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" 
				android:layout_weight="1"
				android:max="255" 
				android:layout_gravity="center" 
				android:minHeight="50dp" 
				android:thumbOffset="4px" 
				android:thumb="@drawable/btn_square_overlay_normal" 
				android:progressDrawable="@drawable/progress_horizontal">
				</SeekBar>
		</LinearLayout>
		<LinearLayout 
		android:id="@+id/Time_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >
			<TableLayout
			    android:layout_width="match_parent"
				android:layout_height="wrap_content"	>
				<TableRow 
				    android:layout_weight="3"
				    android:padding="5dp">
				    <TextView
					    android:id="@+id/textview_andimmuhrzeit"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:textSize="20dp"
					    android:text="Andimmuhrzeit"
					    android:layout_weight="2" />
				    <EditText
					    android:id="@+id/editText_andimmuhrzeit"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:inputType="time" 
					    android:layout_weight="1" />						
				</TableRow>
		    	<TableRow 
		    	    android:layout_weight="3"
		    	    android:padding="5dp">			
					<TextView
					    android:id="@+id/textView_ZAn"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:textSize="20dp"
					    android:text="Andimmperiode"
					    android:layout_weight="2" />
					<EditText
					    android:id="@+id/editText_periode_andimmen"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"			    
					    android:inputType="numberDecimal"
					    android:textSize="20dp"
					    android:layout_weight="1" >	
					    <requestFocus />
					</EditText>		
				</TableRow>
				<TableRow 
		    	    android:layout_weight="3"
		    	    android:padding="5dp">			
					<TextView
					    android:id="@+id/textView_ZAus"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:textSize="20dp"
					    android:text="Ausdimmperiode"
					    android:layout_weight="2" />
					<EditText
					    android:id="@+id/editText_periode_ausdimmen"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"			    
					    android:inputType="numberDecimal"
					    android:textSize="20dp"
					    android:layout_weight="1" >	
					    <requestFocus />
					</EditText>		
				</TableRow>
			</TableLayout>
		</LinearLayout>

		

		<Button
	    android:id="@+id/button_ausdimmen"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"	    
	    android:text="jetzt ausdimmen" />

		<Button
		    android:id="@+id/button_automatik_onoff"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="10dp"
		    android:text="@string/button_automatik_onoff" />

	</LinearLayout>

</LinearLayout>
